Fixed an issue where spacing was wrong with h4 and p elements

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -38,7 +38,7 @@ h3 {
 h4 {
   font-size: $font-size-default*1.25;
   &+p {
-    margin-block-end: 0;
+    margin-top: 0;
   }
 }
 
